--- a/index_vo8jsg (1).html
+++ b/index_vo8jsg (1).html
@@ -20,7 +20,7 @@
           <p
             class="px-4 py-1 border border-black shadow shadow-black bg-black/10 flex items-center gap-2 rounded-lg -ml-2 text-white/90 font-semibold"
           >
-            name
+            PRAVEEN S
             <img
               class="h-7"
               src="https://res.cloudinary.com/dwpmsw2i4/image/upload/v1740317612/verified_yjy4nv.png"
@@ -30,7 +30,7 @@
         <div
           class="px-4 py-5 bg-black/30 rounded-lg flex items-center gap-5 border border-black shadow shadow-black"
         >
-          <a href="#" target="_blank">
+          <a href="http://www.linkedin.com/in/praveen-sankar-a9b9202a4" target="_blank">
             <!-- linkedIn -->
             <img
               src="https://img.icons8.com/?size=100&id=xuvGCOXi8Wyg&format=png&color=000000"
@@ -44,8 +44,8 @@
               class="h-10 cursor-pointer"
             />
           </a>
-          <a href="#" target="_blank">
-            <!-- facebook -->
+          <a href="https://www.instagram.com/itz_me_praveen_s/?_pwa=1" target="_blank">
+            <!-- instagram -->
             <img
               src="https://img.icons8.com/?size=100&id=BrU2BBoRXiWq&format=png&color=000000"
               class="h-10 cursor-pointer"
